tests/baselines/reference/es6ImportDefaultBindingNoDefaultProperty.errors.txt
es6ImportDefaultBindingNoDefaultProperty_1.ts(1,8): error TS1192: Module '"es6ImportDefaultBindingNoDefaultProperty_0"' has no default export.


==== es6ImportDefaultBindingNoDefaultProperty_0.ts (0 errors) ====
    export var a = 10;
    
==== es6ImportDefaultBindingNoDefaultProperty_1.ts (1 errors) ====
    import defaultBinding from "./es6ImportDefaultBindingNoDefaultProperty_0";
           ~~~~~~~~~~~~~~
!!! error TS1192: Module '"es6ImportDefaultBindingNoDefaultProperty_0"' has no default export.
    